<resources>
    <string name="app_name">Instagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">Log In</string>
    <string name="back4app_client_key">cLJu5bGMbGbRgrOUkcGGbH74kSb85xJrtrX2h4Nw</string>
    <string name="back4app_app_id">uzKt735eTlk3Lpz28QGHSXpQelqapKriDMvcUwvO</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="button">Log Out</string>
    <string name="description">Description</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="image_to_post">Image to Post</string>
    <string name="feed">Feed</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
</resources>